Add total registrations to stats
