# pkg/docs/swagger.yaml
@@ -299,6 +299,8 @@ definitions:
       opened_jobs:
         type: integer
       registrations:
+        type: integer
+      registrations_by_date:
         additionalProperties:
           type: integer
         type: object
@@ -1691,7 +1693,7 @@ paths:
       - auth
   /stats:
     get:
-      description: Get statistics for user registrations grouped by days
+      description: Get stats
       produces:
       - application/json
       responses:
@@ -1708,7 +1710,7 @@ paths:
                 message:
                   type: string
               type: object
-      summary: Get statistics for user registrations
+      summary: Get stats
       tags:
       - stats
 securityDefinitions:
