# pkg/model/model.go
@@ -76,7 +76,8 @@ type (
 
 	// Stats for statistics
 	Stats struct {
-		Registrations           map[string]int  `json:"registrations"`
+		RegistrationsByDate     map[string]int  `json:"registrations_by_date"`
+		TotalRegistrations      int64           `json:"total_registrations"`
 		OpenedJobs              int64           `json:"opened_jobs"`
 		TotalContracts          int64           `json:"total_contracts"`
 		TotalTransactionsVolume decimal.Decimal `json:"total_transactions_volume"`
